2012-10-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c: Use our own ADC driver.

	* src/halconf.h (HAL_USE_ADC): Set FALSE.
	(STM32_DMA_REQUIRED): Define here.

	* src/chconf.h (CH_USE_SEMAPHORES): Set FALSE.

	* src/Makefile.in (CSRC): Add adc_stm32f103.c.

	* src/adc.h, src/adc_stm32f103.c: New.

	* src/random.c (NEUG_ADC_SETTING1_SMPR1): Tweak.

2012-10-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (adc2_start): Add SCAN for ADC2.
	(adcgrpcfg, NEUG_ADC_SETTING1_SMPR1, NEUG_ADC_SETTING2_SMPR1):
	ADC1 three channels and ADC2 two channels, one same channel.

	* boards/FST_01/board.h: Use default ADC settings.
	* boards/OLIMEX_STM32_H103/board.h (NEUG_ADC_SETTING2_SMPR1)
	(NEUG_ADC_SETTING2_SMPR2, NEUG_ADC_SETTING2_SQR3)
	(NEUG_ADC_SETTING2_NUM_CHANNELS): Define.

	* tool/neug_check.py: New.
	* src/main.c (neug_setup, USB_NEUG_GET_ERR_COUNT): New.

2012-09-28  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (neug_mode_select): Rename (was: neug_select).
	Implement raw sample data output mode (with NEUG_MODE_RAW_DATA),
	raw lsb data (before conditioning) is with NEUG_MODE_RAW_LSB.

2012-09-27  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (ep_process): Feedback "additiona input" is now
	half of previous output.

	* boards/STBEE_MINI/board.h (NEUG_NON_DEFAULT_ADC_CHANNEL): New.
	(VAL_GPIOACRL): Use PA1 and PA2 for NeuG's analog input.
	(VAL_GPIOCCRL): Revert previous change.
	* boards/STBEE_MINI/mcuconf.h (STM32_PPRE2, STM32_ADCPRE): Revert.

	* src/main.c (RANDOM_BYTES_LENGTH): 32 is best for SHA-256
	construct.

	* src/random.c (adc2_stop, ep_process): New.
	(rng_gen): Call ep_process.

2012-09-26  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STM8S_DISCOVERY/mcuconf.h (STM32_PPRE2, STM32_ADCPRE):
	12MHz ADC clock gives us more speed.
	* boards/STM8S_DISCOVERY/board.h (VAL_GPIOCCRL): Digital push pull
	output 50MHz gives us more entropy.

	* boards/STBEE/mcuconf.h (STM32_PPRE2, STM32_ADCPRE): Ditto.
	* boards/STBEE/board.h (VAL_GPIOCCRL): Ditto.
