@@ -1,3 +1,10 @@
+2012-10-03  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/adc_stm32f103.c (adc_lld_serve_rx_interrupt)
+	(adc_start_conversion): Filter by CRC32.
+	* src/random.c (ep_init, ep_fill_wbuf, ep_process): Filter by CRC32.
+	(neug_init): CRC32 initialization.
+
 2012-10-02  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/random.c: Use our own ADC driver.
